--- a/index.html
+++ b/index.html
@@ -19,31 +19,24 @@
 			<a href="#">Login</a>
 		</div> <!-- right -->
 	</div> <!-- sub_head -->
-
-
-
-  <ul>
-    
-  </ul>
-
-
-
-	<div class="main_nav container clear-fix">
-		<div class="main_nav_text clear-fix" style="width: 80%;">
+	<div class="main_nav clear-fix">
+		<div class="main_nav_text drop-possition" style="width: 80%;">
 			<ul class="dropdown">
 				<li class="dip-inline"><a href="#" class="topic">Believe</a></li> <!-- topic -->
 				<li class="dip-inline"><a href="#">Home</a></li>
 				<li class="dip-inline"><a href="#">Blog</a></li>
 				<li class="dip-inline"><a href="#">Blog Post</a></li>
 				<li class="dip-inline"><a href="#">Comtact</a></li>
-				<li class="dip-inline">
-					<a href="#">Two</a>
-			      <ul class="drp-block">
-			        <li><a href="#">Sub-1</a></li>
-			        <li><a href="#">Sub-2</a></li>
-			        <li><a href="#">Sub-3</a></li>
-			      </ul>
-			    </li>
+				<li class="dip-inline drop-possition">
+					<a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+					    Dropdown link
+					 </a>
+					 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+					    <li><a class="dropdown-item" href="#">Action</a></li>
+					    <li><a class="dropdown-item" href="#">Another action</a></li>
+					    <li><a class="dropdown-item" href="#">Something else here</a></li>
+					 </ul>
+				</li>
 			</ul> <!-- dropdown -->
 		</div> <!-- main_nav_text -->
 		<div class="main_nav_icon" style="width: 20%">
