--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div> <!-- right -->
 	</div> <!-- sub_head -->
 	<div class="main_nav clear-fix">
-		<div class="main_nav_text drop-possition" style="width: 80%;">
+		<div class="main_nav_text" style="width: 80%;">
 			<ul class="dropdown">
 				<li class="dip-inline"><a href="#" class="topic">Believe</a></li> <!-- topic -->
 				<li class="dip-inline"><a href="#">Home</a></li>
@@ -31,7 +31,7 @@
 					<a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
 					    Dropdown link
 					 </a>
-					 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+					 <ul class="dropdown-menu dropdown_menu_possision" aria-labelledby="dropdownMenuLink">
 					    <li><a class="dropdown-item" href="#">Action</a></li>
 					    <li><a class="dropdown-item" href="#">Another action</a></li>
 					    <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -52,11 +52,11 @@
 			<li><a href="#">Electronics</a></li>
 			<li><a href="#" class="dropdown">Men</a></li>
 			<li><a href="#">Women</a></li>
-			<li><a href="#">baby & kinds</a></li>
-			<li><a href="#">books & media</a></li>
-			<li><a href="#">home & kitchen</a></li>
-			<li><a href="#">more stores</a></li>
-			<li><a href="#">offers zone</a></li>
+			<li><a href="#">Baby & Kinds</a></li>
+			<li><a href="#">Books & Media</a></li>
+			<li><a href="#">Home & Kitchen</a></li>
+			<li><a href="#">More Stores</a></li>
+			<li><a href="#">Offers Zone</a></li>
 		</ul>
 	</div> <!-- sub_page_bar -->
 	<div class="mainbg">
