--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 				<li class="dip-inline"><a href="#">Blog</a></li>
 				<li class="dip-inline"><a href="#">Blog Post</a></li>
 				<li class="dip-inline"><a href="#">Comtact</a></li>
-				<li class="dip-inline drop-possition">
+				<li class="dip-inline" id="dropdown_menu_possision">
 					<a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
 					    Dropdown link
 					 </a>
-					 <ul class="dropdown-menu dropdown_menu_possision" aria-labelledby="dropdownMenuLink">
+					 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 					    <li><a class="dropdown-item" href="#">Action</a></li>
 					    <li><a class="dropdown-item" href="#">Another action</a></li>
 					    <li><a class="dropdown-item" href="#">Something else here</a></li>
