--- a/index.html
+++ b/index.html
@@ -73,12 +73,54 @@
 		</div> <!-- women -->
 	</div> <!-- mainbg -->
 	<div class="grids">
-		<div class="grid1 grid_style">1</div>
-		<div class="grid2 grid_style">2</div>
-		<div class="grid3 grid_style">3</div>
-		<div class="grid4 grid_style">4</div>
-		<div class="grid5 grid_style">5</div>
-		<div class="grid6 grid_style">6</div>
+		<div class="grid1 grid_style">
+			<img src="img/shopping.jpg" title="shopping">
+			<div class="shopping_body">
+				<h2>Man</h2>
+				<p>Clothing</p>
+				<button>BUY NOW</button>
+			</div> <!-- shopping_body -->
+		</div>
+		<div class="grid2 grid_style">
+			<img src="img/shopping.jpg" title="shopping">
+			<div class="shopping_body">
+				<h2>Man</h2>
+				<p>Clothing</p>
+				<button>BUY NOW</button>
+			</div> <!-- shopping_body -->
+		</div>
+		<div class="grid3 grid_style">
+			<img src="img/shopping.jpg" title="shopping">
+			<div class="shopping_body">
+				<h2>Man</h2>
+				<p>Clothing</p>
+				<button>BUY NOW</button>
+			</div> <!-- shopping_body -->
+		</div>
+		<div class="grid4 grid_style">
+			<img src="img/shopping.jpg" title="shopping">
+			<div class="shopping_body">
+				<h2>Man</h2>
+				<p>Clothing</p>
+				<button>BUY NOW</button>
+			</div> <!-- shopping_body -->
+		</div>
+		<div class="grid5 grid_style">
+			<img src="img/shopping.jpg" title="shopping">
+			<div class="shopping_body">
+				<h2>Man</h2>
+				<p>Clothing</p>
+				<button>BUY NOW</button>
+			</div> <!-- shopping_body -->
+		</div>
+		<div class="grid6 grid_style">
+			<img src="img/shopping.jpg" title="shopping">
+			<div class="shopping_body">
+				<h2>Man</h2>
+				<p>Clothing</p>
+				<button>BUY NOW</button>
+			</div> <!-- shopping_body -->
+		</div>
 	</div> <!-- grids -->
 
 	<script src="https://kit.fontawesome.com/6ccc615fea.js" crossorigin="anonymous"></script>
