--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	
+	<h1>Chathura aadded this code </h1>
 	<div class="row sub_head clear-fix">
 		<div class="col-xs-12 col-md-6 left">
 			<a href="#">Link-1</a>
