--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	
-	<h1>Chathura aadded this code </h1>
+	<h1>Chathura changed this code </h1>
 	<div class="row sub_head clear-fix">
 		<div class="col-xs-12 col-md-6 left">
 			<a href="#">Link-1</a>
